--- a/ex2-temperature-converter/Cargo.toml
+++ b/ex2-temperature-converter/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "rust-ex4-guessing-game"
+name = "ex2-temperature-converter"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rand = "0.8.5"
