--- a/ex4-guessing-game/Cargo.toml
+++ b/ex4-guessing-game/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "hundred_days_of_rust_development"
+name = "ex4-guessing-game"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rand = "0.8.5"
